# pathtent

./: .gitignore  AGENTS.md  PRIVACY.md  PROJECT_OVERVIEW_KO.md  README.md  nixpacks.toml  railway.toml
projects/backend/: .env.example  Dockerfile  README.md  demo_kipris.py  docker-compose.yml  korpat_tokenizer.py  main.py  nixpacks.toml  pyproject.toml  pyrightconfig.json  railway.json
projects/backend/alembic/: env.py
projects/backend/alembic/versions/: 6dafcfc04c9a_add_patent_cache_tables.py
projects/backend/app/: config.py  database.py  main.py  models.py  repository.py
projects/backend/app/api/: collection_routes.py  dependencies.py  formula_routes.py  kipris_routes.py  lda_routes.py  noise_removal_routes.py  patent_routes.py  patent_schemas.py  pipeline_routes.py  routes.py
projects/backend/app/data/: korean_stopwords.txt
projects/backend/app/schemas/: __init__.py  collection.py  formula.py  lda.py  noise_removal.py  pipeline.py  quantitative.py
projects/backend/app/services/: chat_refiner.py  embedding.py  formula_builder.py  formula_generator.py  ipc_search.py  lda_analyzer.py  (+13 more)
projects/backend/data/: IPC메인그룹_7자리.csv  IPC서브클래스_4자리.csv  ipc_codes.json  ipc_embeddings.npz  ipc_embeddings_mapping.json
projects/backend/kipris/: __init__.py  client.py  models.py  pdf.py  search.py
projects/backend/scripts/: build_ipc_db.py  build_ipc_embeddings.py  debug_ipc_search.py  test_formula_generator.py  test_ipc_search.py  upload_ipc_to_qdrant.py  upload_ipc_to_qdrant_httpx.py
projects/backend/tests/: conftest.py  test_config.py  test_kipris_client.py
(+113 files in other folders)
